--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
     "helmet": "^6.0.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0"
