--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.8.0"
+    "morgan": "^1.10.0"
   }
 }
